加入列表房間、建立房間、加入房間的功能

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,10 +40,10 @@ services:
     environment:
       MessageQueue__Url: "nats://nats:4222"
       Redis__ConnectionString: "redis:6379"
-  web:
-    image: chat/web
-    environment:
-      PROXY_SITE: "http://connector"
+  # web:
+  #   image: chat/web
+  #   environment:
+  #     PROXY_SITE: "http://connector"
   haproxy:
     image: haproxy
     ports:
