--- a/docker-configs/haproxy.cfg
+++ b/docker-configs/haproxy.cfg
@@ -22,33 +22,33 @@ frontend stats
 frontend auth
 	bind :7001 ssl crt /etc/ssl/live/localhost/localhost.pem
     
-    # use_backend auth
+    use_backend auth
 
 frontend chat
 	bind :7002 ssl crt /etc/ssl/live/localhost/localhost.pem
 
-    # use_backend web
+    use_backend connector
 
 frontend k8s
     log global
     option httplog
     bind :443 ssl crt /etc/ssl/live/test.com/test.com.pem
 
-    use_backend k8s
+    # use_backend k8s
 
-# backend auth
-#     balance source
-#     mode http
-#     option forwardfor
-#     http-request add-header X-Forwarded-Proto https if { ssl_fc }
-#     server auth auth:80
+backend auth
+    balance source
+    mode http
+    option forwardfor
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    server auth auth:80
 
-# backend connector
-#     balance source
-#     mode http
-#     option forwardfor
-#     http-request add-header X-Forwarded-Proto https if { ssl_fc }
-#     server connector connector:80
+backend connector
+    balance source
+    mode http
+    option forwardfor
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    server connector connector:80
 
 # backend web
 #     balance source
@@ -57,10 +57,10 @@ frontend k8s
 #     http-request add-header X-Forwarded-Proto https if { ssl_fc }
 #     server web web:80
 
-backend k8s
-    balance source
-    mode http
-    option forwardfor
-    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+# backend k8s
+#     balance source
+#     mode http
+#     option forwardfor
+#     http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
-    server host 192.168.90.100:30080
+#     server host 192.168.90.100:30080
