--- a/webClient/angular.json
+++ b/webClient/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/webclient",
-            "index": "src/index.config.html",
+            "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
@@ -67,7 +67,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "webclient:build"
+            "browserTarget": "webclient:build",
+            "ssl": true,
+            "sslCert": "../docker-configs/localhost.pem",
+            "sslKey": "../docker-configs/localhost.pem"
           },
           "configurations": {
             "production": {
