--- a/webClient/package.json
+++ b/webClient/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xstate": "^4.16.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
