--- a/webClient/package.json
+++ b/webClient/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "promise-cs": "^1.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xstate": "^4.16.0",
