--- a/webClient/angular.json
+++ b/webClient/angular.json
@@ -73,21 +73,21 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "webclient:build",
             "ssl": true,
             "sslCert": "../docker-configs/localhost.pem",
-            "sslKey": "../docker-configs/localhost.pem"
+            "sslKey": "../docker-configs/localhost.pem",
+            "buildTarget": "webclient:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "webclient:build:production"
+              "buildTarget": "webclient:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "webclient:build"
+            "buildTarget": "webclient:build"
           }
         },
         "test": {
