--- a/k8s/authsystem/values.yaml
+++ b/k8s/authsystem/values.yaml
@@ -53,7 +53,7 @@ resources:
     memory: 256Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
